CodeSamples/Kubernetes/DualPod/firefox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
spec:
  containers:
  - image: linuxserver/firefox
    name: firefoxcontainer
    ports:
    - containerPort: 3000
