CodeSamples/Kubernetes/DualPod/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: villan-policy
spec: 
  podSelector:
